Merge from trunk (12602)
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/branches/SHORT_Replay@14030 28e8926c-6b08-0410-baaa-805c5e19b8d6